Implementing help visualization

--- a/help/help_bfp.html
+++ b/help/help_bfp.html
@@ -10,7 +10,7 @@
 
 <h4>Module purpose</h4>
 
-<div style="margin: 20px;">
+<div>
 The purpose of this module is to allow the derivation of the planar attitude that best fits a set of points or lines on a topographic surface. This task is common in geological mapping and geological analysis. By coupling mapping or remote sensing information with topographic data, it is possible to estimate the orientation of the geological plane fitting a set of observations, all located on the topographic surface (example in Fig. 1).
 </div>
 
