--- a/help/help_bfp.html
+++ b/help/help_bfp.html
@@ -2,67 +2,99 @@
 
 <head>
 <title>qgSurf - Best Fit Plane</title>
+	<style>
+h5 { font-size: 95%; color: #333; }
+img { max-width: 95%; }
+</style>
 </head>
 
 <body style="margin: 20px 30px 10px 30px;">
 
 <h3>qgSurf - Best Fit Plane - help</h3>
 
-<h4>Module purpose</h4>
+<div style="font-size: 90%; font-style: italic;">
+	Version 1.0.0 - plugin creator: Mauro Alberti.
+</div>
+
+<h4>Plugin rationale</h4>
 
 <div>
-The purpose of this module is to allow the derivation of the planar attitude that best fits a set of points or lines on a topographic surface. This task is common in geological mapping and geological analysis. By coupling mapping or remote sensing information with topographic data, it is possible to estimate the orientation of the geological plane fitting a set of observations, all located on the topographic surface (example in Fig. 1).
+	By coupling mapping or remote sensing information with topographic data, this plugin allows to estimate the attitude
+	of best-fit-plane to a set of points or lines lying on a topographic surface (example in Fig. 1).
+	This is a common task in geological mapping and analysis.
 </div>
 
-<div style="text-align:center;margin: 20px;font-size: 90%;font-style:italic;">
-	<img src="images/Fig_01.png" style="align:middle; max_width: 80%"/>
-	<br /><br />Fig. 1. Example of estimation of a fault attitude in the western border of Mt. Alpi zone (southern Italy). 
-	<br />Points are drawn on the slope map derived by a DEM, with elevations extracted from DEM ("dem_w4u3" in this case).
-</div>
-
-<br />
+<figure>
+	<img src="images/Fig_01.png"/>
+	<figcaption>
+		Fig. 1. Example of estimation of a fault attitude in the western border of Mt. Alpi zone (Southern Italy).
+	</figcaption>
+</figure>
 
 <h4>Input data</h4>
-The module requires a DEM as the source of the elevations for points digitized by the user on the map or loaded point/line layers. If the CRS of the DEM is in polar coordinates (i.e., latitude and longitude), it is crucial to assign a planar CRS (e.g., UTM, Lambert Conformal Conic) to the current QGis project so that both horizontal and vertical measure units are the same (e.g., meters). Otherwise, the module outputs are wrong. For the same reason, if the source DEM is in a planar CRS, the project CRS must be a planar CRS with horizontal locations expressed in the same unit as the vertical distance unit of the source DEM. 
-<br />
 
-<h4>Usage</h4>
+<div>
+	Elevation information is provided by a Digital Elevation Model (DEM). Points can be digitized by the user directly
+	on the map canvas or alternatively loaded from a point/line layers.
+	When the source DEM crs is in polar coordinates (i.e., latitude and longitude) or its vertical distance unit is
+	different from the horizontal one (e.g., meters for the height and decimal degrees for the horizontal location),
+	it is crucial to assign to the project a planar CRS (e.g., UTM) with resulting
+	horizontal and vertical measures expressed in the same distance units (e.g., meters both for horizontal and vertical
+	distances), in order to avoid incorrect results.
+</div>
 
+<h4>Plugin usage</h4>
 
-<div style="float: left; width: 40%; margin: 10px 10px 0 0;">
-	The user chooses a DEM from the list of rasters currently loaded in the QGis project [1 in Fig. 2]. This DEM provides the source elevation for points.
+<div>
+	The user defines the DEM to be used as elevation source, by choosing from the rasters loaded in the project (ref. 1 in Fig. 2).
+	Afterwards the locations defining the geological plane to be estimated are entered, via digitization of three or more
+	points in the map canvas (ref. 2), or alternatively by choosing a loaded point/line layer (ref. 5 and then 4).
+	In the latter case, selected elements will be used for the best-fit-plane calculation. When there is no active selection, all records will be used.
+	The coordinates of the points defined in the map are added in the list of source points [6].
+	It is possible to reset the list of points by clicking the <b>Reset all source points</b> button (#3).
+	Data can also originate from a loaded layer, chosen in the [5] list and then clicking the <b>Get source points from layer</b>.
 	<br /><br />
-	Then the user defines the x-y locations of the points, by drawing them directly in the map canvas or by choosing a loaded point/line layer. In the latter case, only selected elements are used for the best-fit-plane calculations, unless there is no active selection, in which case all records are used. In the former case, it is possible digitized the points in the map canvas, after clicking on the <b>Define source points in map</b> button [2]. The coordinates of the points defined in the map are added in the list of source points [6]. It is possible to reset the list of points by clicking the <b>Reset all source points</b> button [3]. Data can also originate by a loaded layer, chosen in the [5] list and then clicking the <b>Get source points from layer</b>. Input points are appended to the list [6].
+	When finished with the point definition, the best-fit-plane can be calculated by pressing the
+	<b>Calculate best-fit plane</b> button [7]. A pop-up window should normally display the resulting plane dip direction
+	and dip angle (see example in Fig. 1).
 	<br /><br />
-	When finished with the point definition, the best-fit-plane can be calculated by pressing the <b>Calculate best-fit plane</b> button [7]. A pop-up window should normally display the resulting plane dip direction and dip angle (see example in Fig. 1).
+	It is possible to save one or more set of best-fit plane solutions, together with their source points, in a shapefile.
+	To this purpose, the user can create a new, ad-hoc shapefile with the <b>Create shapefile for storing results</b> button [8].
+	Computed results can be added to this shapefile with the <b>Add current solution to shapefile</b> button [10],
+	that opens a window when the user can insert a description of the computed solution (max. of 50 characters allowed).
 	<br /><br />
-	It is possible to save one or more set of best-fit plane solutions, together with their source points, in a shapefile. To this purpose, the user can create a new, ad-hoc shapefile with the <b>Create shapefile for storing results</b> button [8]. Computed results can be added to this shapefile with the <b>Add current solution to shapefile</b> button [10], that opens a window when the user can insert a description of the computed solution (max. of 50 characters allowed).
-	<br /><br />
-	When completed an analysis session, the results can be saved to the shapefile with the <b>Save and stop edits in shapefile</b> button [11] and loaded in the QGis project.
+	When completed an analysis session, the results can be saved to the shapefile with the
+	<b>Save and stop edits in shapefile</b> button [11] and loaded in the QGis project.
 	<br />
-	In a successive session, the previously created shapefile can be loaded with the <b>Use previous shapefile</b> button [9] and then new results added with the described commands.
+	In a successive session, the previously created shapefile can be loaded with the <b>Use previous shapefile</b> button
+	[9] and then new results added with the described commands.
 </div>
 
-<div style="float: left; display: block; margin: 10px 0 0 10px; text-align:center; font-size: 90%; font-style:italic;">
+<figure>
 	<img src="images/Fig_02.png"/>
-	<br /><br />Fig. 2. Screenshot of the module window.
-</div>
-
-<div style="clear: both;"></div> 
+	<figcaption>
+		Fig. 2. Screenshot of the module window.
+	</figcaption>
+</figure>
 
 <h4>Methodology</h4>
 
-The basis of the algorithm is the application of singular value decomposition to derive the eigenvectors of a set of measures. 
-<br />See, for instance, the discussion in
-<a href="http://stackoverflow.com/questions/15959411/fit-points-to-a-plane-algorithms-how-to-iterpret-results">Best fit plane algorithms why different results?</a>.
-<br /><br /><br />
+<div>
+	The basis of the algorithm is the application of singular value decomposition to derive the eigenvectors of a set of measures.
+	<br />See, for instance, the discussion in
+	<a href="http://stackoverflow.com/questions/15959411/fit-points-to-a-plane-algorithms-how-to-iterpret-results">
+		Best fit plane algorithms why different results?</a>.
+</div>
+
+<br /><br />
+
 <div style="font-size: 85%; font-style: italic;">
 -----
 <br /><br /><br />
-Doc version 2014-06-20, by Mauro Alberti - <a href="mailto:alberti.m65@gmail.com">alberti.m65@gmail.com</a>
+Doc version 2018-08-21, by Mauro Alberti - <a href="mailto:alberti.m65@gmail.com">alberti.m65@gmail.com</a>
 </div>
 
-<br /><br /><br /><br />
+<br /><br /><br />
 
 </body>
 
