Fixed help for Dem-plane intersection

--- a/help/help_bfp.html
+++ b/help/help_bfp.html
@@ -28,7 +28,7 @@ figcaption {
 	Version 1.0.0 - plugin creator: Mauro Alberti.
 </div>
 
-<h4>Plugin rationale</h4>
+<h4>Rationale</h4>
 
 <div>
 	By coupling mapping or remote sensing information with topographic data, this plugin allows to estimate the attitude
@@ -37,7 +37,7 @@ figcaption {
 </div>
 <br /><br />
 <figure>
-	<img src="images/Fig_01.png"/>
+	<img src="images/bfp/Fig_01.png"/>
 	<br>
 	<figcaption>
 		Fig. 1. Example of estimation of a fault attitude in the western border of Mt. Alpi zone (Southern Italy).
@@ -83,7 +83,7 @@ figcaption {
 </div>
 <br /><br />
 <figure>
-	<img src="images/Fig_02.png"/>
+	<img src="images/bfp/Fig_02.png"/>
 	<br>
 	<figcaption>
 		Fig. 2. Screenshot of the module window.
