Implemented tools from yaml

--- a/help/help_bfp.html
+++ b/help/help_bfp.html
@@ -25,7 +25,7 @@ figcaption {
 <h3>qgSurf - Best Fit Plane - help</h3>
 
 <div style="font-size: 90%; font-style: italic;">
-	Version 1.0.0 - plugin creator: Mauro Alberti.
+plugin creator: Mauro Alberti.
 </div>
 
 <h4>Rationale</h4>
