--- a/help/help_di.html
+++ b/help/help_di.html
@@ -62,7 +62,7 @@ plugin creator: Mauro Alberti.
 	theoretical intersections by pressing "Calculate intersection".
 	<br /><br /> You can change the last intersection color by choosing a color from the "Intersection color" combo box, and delete all the intersections
 	with "Cancel intersections".
-	<br /><br /> In the "Output" section, you can save the last intersections as a point or line shapefile, also loading it
+	<br /><br /> In the "Output" section, you can save the last intersections as a point shapefile, also loading it
 	within the current project.
 </div>
 
@@ -70,7 +70,6 @@ plugin creator: Mauro Alberti.
 
 <div>
 - DEMs in geographic coordinates (i.e., lat-lon) are not supported. Using the plugin with them will only provide approximate results, particularly with regards to the dip angle.
-<br />- Rotation angles for input rasters (DEM) are not supported. Errors with DEM reading will be generated.
 </div>
 
 <h4>Known bugs</h4>
