--- a/help/help_stereonet.html
+++ b/help/help_stereonet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>qgSurf - stereonet help</title>
+		<title>Stereonet - qgSurf</title>
 		<style>
 			body { padding: 10px; }		
 			figure { padding: 10px; }	
