Completed check of helps

--- a/help/help_bfp.html
+++ b/help/help_bfp.html
@@ -124,6 +124,7 @@
 		<div>
 			Selected records can be exported in a new or a previous shapefile, both as points or as lines
 			connecting the source points, for subsequent GIS processings (fig. 6).
+			The output shapefile projection is the same of the current QGIS project.
 		</div>
 		<br/><br/>
 		<figure>
