--- a/help/help_di.html
+++ b/help/help_di.html
@@ -63,7 +63,7 @@ plugin creator: Mauro Alberti.
 	<br /><br /> You can change the last intersection color by choosing a color from the "Intersection color" combo box, and delete all the intersections
 	with "Cancel intersections".
 	<br /><br /> In the "Output" section, you can save the last intersections as a point shapefile, also loading it
-	within the current project.
+	within the current project. The output shapefile projection is the same of the current QGIS project.
 </div>
 
 <h4>Known limitations</h4>
