--- a/help/help_stereonet.html
+++ b/help/help_stereonet.html
@@ -119,14 +119,6 @@
 			<figcaption>Fig. 5. Stereonet plot interface.</figcaption>
 		</figure>
 		<br /><br />
-		An example of stereonet is shown in Fig. 6.
-		<br /><br />
-		<figure>
-			<img src="images/stereonet/stereonet_fig_06.png" alt="Stereonet interface">
-			<br />
-			<figcaption>Fig. 6. Stereonet example.</figcaption>
-		</figure>
-		<br /><br />
 
 		<div style="font-size: 85%; font-style: italic;">
 		-----
@@ -136,6 +128,6 @@
 
 		<br /><br />
 		
-	<body>
+	</body>
 
 </html>
