Completed plugin modules checks

--- a/help/help_pts_plane_dists.html
+++ b/help/help_pts_plane_dists.html
@@ -17,6 +17,8 @@
 		<div>
 			This tool allows to calculate the perpendicular distances between the points in a layer and a geological plane,
 			expressed via its attitude (dip direction and dip angle) and a point located on it (the "source point").
+			The value is positive when the point is higher than the plane, negative when lower than the plane, zero
+			when located on the plane.
 			<br/><br/>
 			Its interface is subdivided in three sections (fig. 1):
 		</div>
